2021-10-23

  * Fix team spacing on Mainland TG (See https://code.wildfiregames.com/differential/diff/18891/)

2021-10-23

  * Remove player color settings from At World's End (scenario) (fixes
  crashing when re-entering game setup menu)
  * Remove Lonely Mountain (while playable, it's basically an incomplete map)
  * Remove Jerusalem (freezes for about 5 seconds after game starts, laggy)
  * v0.25.6 released

2021-10-23

  * Yekaterinaville added (random map)
  * Chess added (skirmish map)

2021-10-22

  * Mainland Rectangled added (random map)

2021-10-20

  * allow changing civs, fix warnings
    * The Duel
    * Lonely Mountain
    * Country Side

  * change fauna_bear to faun_bear_brown and wolf_snow to wolf_arctic
  (fixes warnings on several maps)

2021-10-16

  * Add more TeamPlacement options to Mainland and African Plains:
  stronghold, line, randomGroup, and besideAllies
  * v0.25.5 released

2021-10-10
  * re-add simulation/templates/special/filter/disableGarrisonHolder.xml, which
    Andy accidentally deleted in a previous commit. (fixes
    Fert random maps)
  * v0.25.3 released

  * Add Mainland TG and African Plains TG (random maps)
  * Add Cliffs of Carnage (skirmish map)
  * v0.25.4 released

2021-10-09

  * Fix breakage with stock 0ad random maps
  * Fix most random maps (migrate for recent compatibility changes in 0ad)
  * v0.25.2 released

2021-10-01

  * Skirmish map added: Jerusalem VII-VI

2021-09-30

  * v0.25.1 released
  * Fix errors on Battles in the Dirt, and many other maps (Thanks for
  the report Old Roman).

2021-09-29

  * Scenario added: The Limes

2021-09-27

  * fixed errors produced by City vs City (skirmish map)

2021-09-26

  * v0.25.0 released