@@ -53,19 +53,15 @@ var clMetal = g_Map.createTileClass();
 var clFood = g_Map.createTileClass();
 var clBaseResource = g_Map.createTileClass();
 var clWater = g_Map.createTileClass();
+var clCliff = g_Map.createTileClass();
 
 const mapBounds = g_Map.getBounds();
-// var startAngle = randBool() ? 0 : Math.PI / 2;
-var startAngle = randBool() ? 0 : Math.PI / 2;
+var startAngle = 0;
 const mapCenter = g_Map.getCenter();
 var WATER_WIDTH = 0.15;
 const heightSeaGround = -20;
 const heightWaterLevel = 1;
-// const heightPlayer = 5;
 const heightHill = 12;
-// var horizontal = randBool();
-var clWater = g_Map.createTileClass();
-var clCliff = g_Map.createTileClass();
 
 for (let x of [mapBounds.left, mapBounds.right])
 	paintRiver({
@@ -95,13 +91,12 @@ createArea(
 		new SlopeConstraint(1, Infinity)
 	]);
 
-var oceanAngle = startAngle + randFloat(-1, 1) * Math.PI / 12;
 var playerIDs = sortAllPlayers();
 var playerPosition = playerPlacementArcs(
 	playerIDs,
 	mapCenter,
 	fractionToTiles(0.35),
-	oceanAngle,
+	startAngle,
 	0.1 * Math.PI,
 	0.9 * Math.PI);
 
