@@ -1,6 +1,7 @@
 2021-10-23
 
   * Fix team spacing on Mainland TG (See https://code.wildfiregames.com/differential/diff/18891/)
+  * Make player positions more uniform on Mainland Rectanged and Yekaterinaville
 
 2021-10-23
 
